--- a/404.html
+++ b/404.html
@@ -72,9 +72,9 @@
 
     // If the path starts with '/app', manipulate the browser history to keep the rest of the URL
     if (path.startsWith('/app')) {
-        window.location.href = `https://test-app.safegreet.in/app${window.location.search}${window.location.hash}`;
+        window.location.href = `https://test-app.safegreet.in/${window.location.search}${window.location.hash}`;
     } else if (path.startsWith('/visitor')) {
-        window.location.href = `https://test-visitor.safegreet.in/app${window.location.search}${window.location.hash}`;
+        window.location.href = `https://test-visitor.safegreet.in/${window.location.search}${window.location.hash}`;
     } else if (path !== '/' && path !== '/index.html') {
         // If it's not a valid root URL, redirect to root 404 page
         window.location.href = '/';
